--- a/demeter-server/src/Login Page/login.css
+++ b/demeter-server/src/Login Page/login.css
@@ -7,3 +7,26 @@
     height: 100vh;
     width: auto;
 }
+
+.LoginForm {
+    width: 100%;
+    height: 100vh;
+    padding : 20% 15%;
+}
+
+.LoginForm .loginField {
+    display :flex;
+    flex-direction: row;
+}
+
+.LoginForm Button {
+    width: 30%;
+}
+
+.LoginForm .form-label {
+    width: 25%; 
+}
+
+.LoginForm .form-control {
+    width: 75%;
+}
