--- a/demeter-server/src/Login Page/login.css
+++ b/demeter-server/src/Login Page/login.css
@@ -1,17 +1,24 @@
 .LoginPage{
     display: flex;
     flex-direction: row;
+    font-family: 'Antic', serif;
 }
 
 .LoginPage img {
     height: 100vh;
     width: auto;
 }
-
+.LoginPage h1{
+    text-align: center;
+    font-family: 'Ovo', serif;
+}
+h2 {
+    text-align: center;
+}
 .LoginForm {
     width: 100%;
     height: 100vh;
-    padding : 20% 15%;
+    padding : 10% 15%;
 }
 
 .LoginForm .loginField {
@@ -20,7 +27,9 @@
 }
 
 .LoginForm Button {
+    display: block;
     width: 30%;
+    margin: auto;
 }
 
 .LoginForm .form-label {
