--- a/demeter-ui/src/css/news.css
+++ b/demeter-ui/src/css/news.css
@@ -9,7 +9,7 @@
 .flexNewsBox {
     /* text-align: left; */
     justify-content: space-between;
-    margin-bottom: .75rem;
+    /* margin-bottom: .75rem; */
 }
 
 .flexNewsEdit {
@@ -18,6 +18,7 @@
     width: 15%;
     display: block;
     font-size: 1.5rem;
+    text-align: right;
 }
 
 .newsTitle {
@@ -39,12 +40,12 @@
 .newsDate {
     color: var(--demeter-grey);
     font-size: 1.25rem;
-    margin-top: .125rem;
+    margin-top: .25rem;
 }
 
 .newsLine {
     border: 2px solid #EEE;
     width: 50%;
     border-radius: 5px;
-    margin: 2rem auto 1.5rem auto;
+    margin: .5rem auto 2rem;
 }
