--- a/demeter-ui/src/css/style.css
+++ b/demeter-ui/src/css/style.css
@@ -38,6 +38,7 @@ button {
 
 .loginText {
     color: var(--demeter-grey);
+    text-align: center;
 }
 
 /* flex */
@@ -70,12 +71,15 @@ button {
 /* popup ui */
 .popupForm {
     padding: 1rem;
-    /* font-size: 1.25rem; */
+}
+
+.popupForm label {
+    margin-bottom: 0;
+    padding-left: .1rem;
 }
 
 .popupBtn {
     margin: 0 1rem 1rem 1rem;
-    /* font-size: 1.25rem; */
 }
 
 .popupBtnBox {
@@ -86,13 +90,11 @@ button {
 .popupBtnBox>button {
     width: 10rem;
     margin: 0 1rem 0 1rem;
-    /* font-size: 1.25rem; */
-
 }
 
 /* buttons with Demeter theme */
 .btn {
-    transition: all 0.2s;
+    transition: all 0.15s;
 }
 
 .btn-demeter {
@@ -121,4 +123,12 @@ button {
 
 .btn-link:hover {
     color: var(--demeter-green-v);
+}
+
+.btn-outline-dark {
+    border-width: 2px;
+}
+
+.btn-outline-dark:hover {
+    background-color: var(--demeter-black);
 }
