--- a/demeter-ui/src/css/style.css
+++ b/demeter-ui/src/css/style.css
@@ -95,6 +95,11 @@ button {
     margin: 0 1rem 0 1rem;
 }
 
+.popupTitle {
+    text-align: center;
+    margin-bottom: .25rem;
+}
+
 /* buttons with Demeter theme */
 .btn {
     transition: all 0.15s;
