--- a/demeter-ui/src/css/style.css
+++ b/demeter-ui/src/css/style.css
@@ -79,10 +79,6 @@ button {
     padding-left: .1rem;
 }
 
-.popupBtn {
-    margin: 0 1rem 1rem 1rem;
-}
-
 .popupBtnBox {
     margin: auto;
     text-align: center;
@@ -98,6 +94,20 @@ button {
 .popupTitle {
     text-align: center;
     margin-bottom: .25rem;
+}
+
+.popupSelectLabel {
+    width: 100%;
+}
+
+.popupRowSplit {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.popupRowSplit>div {
+    width: 49%;
 }
 
 /* buttons with Demeter theme */
