--- a/demeter-ui/src/css/login.css
+++ b/demeter-ui/src/css/login.css
@@ -1,41 +1,68 @@
-.LoginPage{
-    display: flex;
-    flex-direction: row;
-    font-family: 'Antic', serif;
+.LoginPage {
+    flex-wrap: nowrap;
+    flex-direction: row-reverse;
+    width: 100%;
 }
 
-.LoginPage img {
+.loginImg {
     height: 100vh;
     width: auto;
 }
-.LoginPage h1{
+
+.flexLoginBox {
+    height: 100%;
+    width: 100%;
+    min-width: fit-content;
+    margin: auto;
+    padding: 10% 0;
+}
+
+.loginTitleBox {
+    width: 100%;
+}
+
+.loginTitle {
+    width: inherit;
     text-align: center;
+    text-transform: uppercase;
     font-family: 'Ovo', serif;
 }
-h2 {
-    text-align: center;
+
+.loginLine {
+    border: 1.5px solid #EEE;
+    width: 15rem;
+    border-radius: 5px;
+    margin: 0 auto;
 }
-.LoginForm {
-    width: 100%;
-    height: 100vh;
-    padding : 10% 15%;
+
+.loginForm {
+    width: 40%;
+    margin: auto;
+    min-width: 10rem;
 }
 
 .LoginForm .loginField {
-    display :flex;
+    display: flex;
     flex-direction: row;
 }
 
-.LoginForm Button {
-    display: block;
-    width: 30%;
+.loginBtn {
     margin: auto;
 }
 
-.LoginForm .form-label {
-    width: 25%; 
-}
+/* TODO: RESPONSIVE */
+@media only screen and (max-width: 800px) { 
+ .LoginPage {
+    flex-direction: column;
+    flex-wrap: wrap;
+ }
 
-.LoginForm .form-control {
-    width: 75%;
+ .loginForm {
+    width: 90%;
+ }
+
+ .loginImg {
+    height: auto;
+    width: inherit;
+ }
 }
