--- a/demeter-ui/src/css/App.css
+++ b/demeter-ui/src/css/App.css
@@ -26,7 +26,7 @@
 }
 
 .App-footer{
-  background-color:#696969;
+  background-color: var(--demeter-black);
   height: fit-content;
   width: 100%;
   position: fixed;
@@ -36,15 +36,21 @@
 .flexFooter {
   align-items: baseline;
   justify-content: space-between;
-  margin: .5rem 1rem;
+  margin: .75rem .5rem;
 }
 
 .App-footer p {
   color: white;
   margin-bottom: 0;
-  font-size: 1rem;
+  font-size: .85rem;
+  align-self: center;
 }
 
 .LVR {
   font-family: 'Spectral SC', serif;
+}
+
+.deco {
+  width: 7rem;
+  font-size: .9rem !important;
 }
