--- a/demeter-ui/src/css/App.css
+++ b/demeter-ui/src/css/App.css
@@ -3,6 +3,7 @@
 }
 
 .App-header {
+  width: 100%;
   background-color: #fff;
   min-height: 10vh;
   display: flex;
@@ -21,8 +22,10 @@
 }
 
 .App-body{
+  width: 100%;
   height: max-content;
   margin-bottom: 2.5rem;
+  overflow: scroll;
 }
 
 .App-footer{
