--- a/demeter-ui/src/css/recipe.css
+++ b/demeter-ui/src/css/recipe.css
@@ -3,6 +3,27 @@
     margin: auto;
 }
 
+.recipeContent {
+    width: 80%;
+    margin: auto;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.recipeListBox {
+    width: fit-content;
+    margin: 0 auto;
+    min-width: 50%;
+}
+
+.filterBox {
+    width: min-content;
+}
+
+.filterBox>button {
+    width: 10rem;
+}
+
 .createRecipePage {
     width: 60%;
     margin: auto;
