--- a/demeter-ui/src/css/recipe.css
+++ b/demeter-ui/src/css/recipe.css
@@ -14,13 +14,17 @@
 .recipeListBox {
     width: fit-content;
     margin: 0 auto;
-    min-width: 50%;
+    margin-left: 1rem;
 }
 
 .recipeList {
     width: 100%;
     flex-direction: column;
+}
+
+.recipeList>span {
     text-align: left;
+    width: 100%;
 }
 
 .filterBox {
