--- a/demeter-ui/src/css/recipe.css
+++ b/demeter-ui/src/css/recipe.css
@@ -37,13 +37,14 @@
 }
 
 .createRecipePage {
-    width: 60%;
+    width: 80%;
     margin: auto;
     margin-bottom: 4rem;
 }
 
 .newRecipeForm {
     width: 100%;
+    text-align: left;
 }
 
 .addIngQt {
@@ -56,4 +57,43 @@
 
 .addIngQt>* {
     align-self: center;
+}
+
+.ingListEmpty {
+    width: 100%;
+    text-align: center;
+}
+
+.ingListEmpty>span {
+    width: 100%;
+    display: inline-block;
+}
+
+.ingListHeader {
+    width: 100%;
+    color: var(--demeter-grey);
+    justify-content: flex-start;
+}
+
+.ingListHeader>span {
+    display: inline-block;
+    text-align: left;
+    min-width: fit-content;
+}
+
+.ingListRow {
+    text-align: left;
+    justify-content: flex-start;
+}
+
+.ingListRow>span {
+    text-align: left !important;
+}
+
+.ingListCol {
+    width: 50%;
+}
+
+.ingListColS {
+    width: 20%;
 }
