--- a/demeter-ui/src/css/recipe.css
+++ b/demeter-ui/src/css/recipe.css
@@ -84,6 +84,7 @@
     width: 100%;
     color: var(--demeter-grey);
     justify-content: flex-start;
+    padding-inline: .25rem;
 }
 
 .ingListHeader>span {
