--- a/demeter-ui/src/css/recipe.css
+++ b/demeter-ui/src/css/recipe.css
@@ -116,7 +116,14 @@
     justify-content: center;
 }
 
-.editIngListRow {
-    width: 100%;
-    justify-content: space-between;
+.editIngListRowBox {
+    width: 90%;
+}
+
+.editIngListCol {
+    width: 56%;
+}
+
+.editIngListColS {
+    width: 22%;
 }
