début formattage single recipe page

--- a/demeter-ui/src/css/style.css
+++ b/demeter-ui/src/css/style.css
@@ -102,6 +102,16 @@ option {
     margin-bottom: 0 !important;
 }
 
+.pageSplit {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+.pageSplit>div {
+    width: 50%;
+}
+
 .loginText {
     color: var(--demeter-grey);
     text-align: center;
