--- a/demeter-ui/src/css/style.css
+++ b/demeter-ui/src/css/style.css
@@ -135,6 +135,7 @@ option {
     padding: 5px;
     transition: all 0.2s;
     font-size: 1.75rem;
+    cursor: pointer;
 }
 
 .iconEdit:hover {
@@ -161,6 +162,10 @@ option {
 
 .popupForm button {
     display: inline-block;
+}
+
+.popupForm p {
+    white-space: pre-wrap;
 }
 
 .popupBtnBox {
@@ -293,6 +298,7 @@ option {
 
 .nav-link {
     color: var(--demeter-black);
+    margin-bottom: 0;
 }
 
 .nav-link.active {
@@ -304,6 +310,15 @@ option {
 }
 
 .nav-link:focus {
+    box-shadow: none !important;
+}
+
+.nav-link-tab {
+    margin-top: 1px;
+    margin-bottom: -1px;
+}
+
+.nav-link-tab:focus {
     box-shadow: none !important;
     border-color: #dee2e6 #dee2e6 #fff !important;
     border-radius: .25rem .25rem 0 0;
