--- a/demeter-ui/src/css/task.css
+++ b/demeter-ui/src/css/task.css
@@ -3,6 +3,10 @@
     margin: auto;
 }
 
+.taskPageResetBtn .iconRefresh {
+    margin-right: .5rem;
+}
+
 .taskPageResetBtn:hover .iconRefresh {
     color: white;
 }
@@ -11,15 +15,42 @@
     align-self: center;
 }
 
-.taskRowBox {
+.taskRowList {
     width: 60%;
     min-width: 400px;
     margin: auto;
     flex-direction: column;
 }
 
-.taskRow {}
+.taskRowBox {
+    width: 100%;
+}
 
-.taskRow input {
+.taskRowBox span, .taskRowBox input {
+    align-self: center;
+}
+
+.taskRowBox input, .taskRowBox .taskResponsable {
+    margin-inline: .5rem;
+}
+
+.taskRowBox input {
     width: 5rem;
+}
+
+.taskRowBox .iconCheck {
+    margin-right: .25rem;
+}
+
+.taskRow {
+    width: 100%;
+}
+
+.taskResponsable {
+    color: var(--demeter-grey);
+}
+
+.taskChildRow {
+    width: 100%;
+    margin-left: 2rem;
 }
