--- a/demeter-ui/src/css/style.css
+++ b/demeter-ui/src/css/style.css
@@ -99,7 +99,7 @@ option {
 .pageTitle {
     text-align: center;
     width: 100%;
-    margin-bottom: 0 !important;
+    margin-top: .5rem;
 }
 
 .pageSplit {
