lines between rows

--- a/demeter-ui/src/css/style.css
+++ b/demeter-ui/src/css/style.css
@@ -152,6 +152,12 @@ option {
 
 .iconRefresh {}
 
+.iconBullet {
+    color: var(--demeter-grey);
+    align-self: center;
+    transform: rotate(90deg);
+}
+
 .iconCheck {
     color: var(--demeter-green);
 }
