popup liste fournisseurs

--- a/demeter-ui/src/css/App.css
+++ b/demeter-ui/src/css/App.css
@@ -14,7 +14,7 @@
   font-weight: bold;
   color: white;
   font-family: 'Ovo', serif;
-  margin-top: .25rem;
+  padding-top: .5rem;
 }
 
 .App-header a {
