--- a/demeter-ui/src/css/style.css
+++ b/demeter-ui/src/css/style.css
@@ -304,7 +304,7 @@ option {
 
 /* btn-icon */
 [class*="btn-icon"] {
-    display: flex;
+    display: flex !important;
     flex-direction: row;
 }
 
