--- a/demeter-ui/src/css/style.css
+++ b/demeter-ui/src/css/style.css
@@ -227,6 +227,19 @@ option {
     width: 100%;
 }
 
+.popupCheck {
+    width: fit-content;
+    display: inline-flex;
+    margin-left: .25rem;
+}
+
+.popupCheck>input {
+    margin: 0;
+    position: relative;
+    transform: scale(1.3);
+    align-self: center;
+}
+
 /* buttons with Demeter theme */
 .btn {
     transition: all 0.15s;
