--- a/demeter-ui/src/css/style.css
+++ b/demeter-ui/src/css/style.css
@@ -69,7 +69,7 @@ select {
 }
 
 .hide {
-    display: none;
+    display: none !important;
 }
 
 .center {
@@ -244,7 +244,6 @@ select {
     width: fit-content;
     display: inline-flex;
     margin-left: .25rem;
-    cursor: pointer;
 }
 
 .popupCheck>input {
@@ -252,6 +251,7 @@ select {
     position: relative;
     transform: scale(1.3);
     align-self: center;
+    cursor: pointer;
 }
 
 /* buttons with Demeter theme */
