--- a/demeter-ui/src/css/style.css
+++ b/demeter-ui/src/css/style.css
@@ -224,7 +224,7 @@ select {
 
 .popupRowSplit {
     width: 100%;
-    display: flex;
+    display: inline-flex;
     justify-content: space-between;
 }
 
@@ -409,7 +409,7 @@ select {
 }
 
 .react-confirm-alert-overlay {
-    animation: react-confirm-alert-fadeIn .2s .2s forwards !important;
+    animation: react-confirm-alert-fadeIn .2s .2s all !important;
     background: hsla(0, 0%, 0%, .85) !important;
 }
 
